--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,14 @@
 venv
 
 #Flask environment variables
-.flaskenv
+.env
 
 #IDE setting files
 .vscode
+
+#Python cache
+*__pycache__
+app/__pycache__
 
 #Other files
 *.txt
