--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,6 @@ __pycache__
 app/__pycache__
 app/main/__pycache__
 
-#Database
-app.db
-
 #Other files
 test.py
 test.html
@@ -25,3 +22,4 @@ test.json
 notes.txt
 *.exe
 PPT.pptx
+image.jpg
